@@ -737,10 +737,6 @@ class FileBuildTest(unittest.TestCase):
         self.assertEqual(module.package, 0)
         self.assertFalse(module.is_statement)
         with self.assertRaises(StatementMissing):
-            with pytest.warns(DeprecationWarning) as records:
-                self.assertEqual(module.statement(future=True), module)
-        assert len(records) == 1
-        with self.assertRaises(StatementMissing):
             module.statement()
 
     def test_module_locals(self) -> None:
